force-app/main/default/objects/Encounter__c/fields/Completion_Handoff_Error__c.field-meta.xml
<CustomField>
    <fullName>Completion_Handoff_Error__c</fullName><label
  >Completion Handoff Error</label><length>255</length><required
  >false</required><type>Text</type>
</CustomField>