force-app/main/default/objects/Encounter__c/fields/Completion_Handoff_Queued_At__c.field-meta.xml
<CustomField><fullName
  >Completion_Handoff_Queued_At__c</fullName><label
  >Completion Handoff Queued At</label><required>false</required><type
  >DateTime</type></CustomField>