force-app/main/default/objects/Encounter__c/fields/Completion_Handoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Handoff_Status__c</fullName><label
  >Completion Handoff Status</label><required>false</required><type
  >Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Pending</fullName><default>false</default><label
        >Pending</label></value>
        <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
        <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>