force-app/main/default/objects/Encounter__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Encounters</relationshipLabel>
    <relationshipName>Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>