force-app/main/default/objects/Encounter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <columns>Class__c</columns>
    <columns>Start__c</columns>
    <columns>Practitioner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>