force-app/main/default/objects/Encounter__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <columns>Class__c</columns>
    <columns>Start__c</columns>
    <columns>Practitioner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planned,Arrived,In Progress</value>
    </filters>
    <label>Open</label>
</ListView>