force-app/main/default/objects/Encounter__c/listViews/Open_Encounters.listView-meta.xml
<ListView>
    <fullName>Open_Encounters</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <columns>Class__c</columns>
    <columns>Start__c</columns>
    <columns>Practitioner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Finished,Cancelled</value>
    </filters>
    <label>Open Encounters</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>